1.6.0 (23.11.2016):

* Catch errors importing text layer of DjVu.
* + support for dragging files from Nautilus (or Konqueror, or anything that
  delivers URIs). Closes Launchpad (Ubuntu) bug #515854:
  (Drag and drop PDF from Nautilus should import PDF)
* + support for brackets in imported djvu hidden layer


1.5.5 (23.10.2016):

* Work around bug in imagemagick causing the image depth not to be respected.
  Closes bug #231 (Saving PDF corrupts 1-bpp images imported from a PDF)
  Thanks to Petr Písař for the patch.
* Fix deleting pages by selecting thumbnails and hitting delete key.
* Fixed drag-and-drop operations broken in v1.5.2.
  Closes bug #232 (Unable to reorder pages in the thumbview)


1.5.4 (14.10.2016):

* Fixed cycle SANE handle error when using frontend other than libsane-perl.
* Fixed bug preventing # pages = all by default, even with ADF.
  Closes Debian bug #840534 (#Pages scan option always defaults to '1')


1.5.3 (12.10.2016):

* Added scroll bars to all tabs on scan dialog.
  Closes bug #228 (missing scan+close button on scanning window)
* Fixed bug copy-pasting pages where subsequent operations on new pages are
  carried out on old pages.
* Changed default compression for lineart PDFs to PNG.
* Fixed cycle SANE handle option to reset options after reloading.
* Fixed Perl warnings if backend offers no "source" scan option.
* Update to Catalan translation (thanks to Davidmp)
* Update to Slovak translation (thanks to Dušan Kazik)


1.5.2 (24.08.2016):

* Fixed bug prepending or appending to a PDF with a space in the path.
* Refactored code handling geometry options to reduce complexity and duplication
* Removed metadata variables %h, %i, %s, adding %H, %I, %S.
  Closes bug #226 (Formatting timestamp for filename template broken)
* Encode document date in ASCII to workaround a bug in PDF::API2 where UTF-8
  encoding caused garbage in the metadata.
  Closes bug #224 (CreationDate and ModDate fields are missing)