@@ -18,7 +18,7 @@ Depends: libgtk2-imageview-perl, libgtk2-ex-simple-list-perl,
  librsvg2-common, libset-intspan-perl (>= 1.10), liblist-moreutils-perl,
  libhtml-parser-perl, libgoo-canvas-perl, libproc-processtable-perl,
  libreadonly-perl, liblog-log4perl-perl, libtry-tiny-perl, libfilesys-df-perl,
- libossp-uuid-perl | libdata-uuid-perl, ${misc:Depends}
+ libossp-uuid-perl | libdata-uuid-perl, libdate-calc-perl, ${misc:Depends}
 Recommends: libgtk2-ex-podviewer-perl, sane, xdg-utils, djvulibre-bin,
  unpaper, tesseract-ocr | gocr | cuneiform
 Description: GUI to produce PDFs or DjVus from scanned documents
