@@ -1,6 +1,8 @@
 gscan2pdf (1.6.0-1) unstable; urgency=low
 
   * New upstream release
+    Closes: #842239 (Arbitrary document metadata date chosen)
+    New Depends: libdate-calc-perl
 
  --
 
